--- a/default/searchbnf.conf
+++ b/default/searchbnf.conf
@@ -1,5 +1,5 @@
 [lookupinfo-command]
-syntax = LOOKUPINFO
+syntax = lookupinfo
 alias =
 shortdesc = Generates a list of all files found in all apps/lookups directories
 description = \
@@ -14,7 +14,7 @@ usage = public
 tags = info_tools_app
 
 [bundleinfo-command]
-syntax = BUNDLEINFO
+syntax = bundleinfo
 alias =
 shortdesc = Generates a list of all files found in the most current search bundle
 description = \
@@ -29,7 +29,7 @@ usage = public
 tags = info_tools_app
 
 [userinfo-command]
-syntax = USERINFO
+syntax = userinfo
 alias =
 shortdesc = Generates a list of all files found in all etc/users directories
 description = \
@@ -44,14 +44,120 @@ usage = public
 tags = info_tools_app
 
 [btoolinfo-command]
-syntax = BTOOLINFO CONFNAME=<conf>
+syntax = btoolinfo conf=<conf>
 alias =
 shortdesc = Generates results from a btool command with the debug option specified
 description = \
     This command generates results that contain the following fields: confpath, stanza, property, value
 comment1 = \
-    The command requires a valid conf file name passed as the only arguement
-example1 = | btoolinfo confname="server"
+    The command requires a valid conf file name passed as the only argument
+example1 = | btoolinfo conf="server"
+category = generating
+appears-in = 1.0
+maintainer = sjohnson
+usage = public
+tags = info_tools_app
+
+
+[pinginfo-command]
+syntax = pinginfo <address>=<hostname or ip address> (count=<number of pings>)
+alias =
+shortdesc = Generates results from a ping command for the address specified
+description = \
+    This command generates results that contain the following fields: pingdata
+comment1 = \
+    The command requires a valid ip address or name passed as the address argument and optionally a count
+comment2 = \
+		The count is optional but must be a number between 1 and 10 - the default value for count is 3
+example1 = | pinginfo address="google.com" count=5
+category = generating
+appears-in = 1.0
+maintainer = sjohnson
+usage = public
+tags = info_tools_app
+
+[sslinfo-command]
+syntax = sslinfo <hostport>=<address:port> (timeout=<value>)
+alias =
+shortdesc = Generates results from openssl s_client  command for the address and port specified
+description = \
+    This command generates results that contain the following fields: data
+comment1 = \
+    The command requires a valid host:port passed and optionally a timeout value in seconds for the command (default 5) maximum of 30
+example1 = | sslinfo hostport="google.com:443" timeout=10
+category = generating
+appears-in = 1.0
+maintainer = sjohnson
+usage = public
+tags = info_tools_app
+
+[artifactinfo-command]
+syntax = artifactinfo <option_name>=<option_value>
+alias =
+shortdesc = Generates results from info.csv file inside a search artifact
+description = \
+    This command generates results from a search artifacts info.csv file, there are 3 options: sid, search, regex
+comment1 = \
+    This command requires a valid search id passed and will return all fields from the info.csv file 
+example1 = | artifactinfo sid=scheduler__nobody_U3BsdW5rX1NBX0NJTQ__RMD5ea35b39b15ead40d_at_1661383920_4853
+comment2 = \
+		This option will perform a text search of ALL search artifacts info.csv files for the string
+example2 = | artifactinfo search="a text string to search for"
+comment3 = \
+		This option will perform a regex search of ALL search artifacts info.csv files for a match to the regex
+example3 = | artifactinfo regex="\d{3}abc.+"
+category = generating
+appears-in = 1.0
+maintainer = sjohnson
+usage = public
+tags = info_tools_app
+
+[varinfo-command]
+syntax = varinfo (<subdir>=<subdirectory under splunk/var>)
+alias =
+shortdesc = Generates a list of files under $SPLUNK_HOME/var
+description = \
+    This command generates results that contain the following fields: file, size, mtime \
+    Only files UNDER $SPLUNK_HOME/var are listed.  Upward recursion is not allowed and will return nothing.
+comment1 = \
+    If no option is specified all files under $SPLUNK_HOME/var are listed - Warning: can be a lot of files
+example1 = | varinfo 
+comment2 = \
+		The subdir option permits restricting the list to the specified subdirectory under $SPLUNK_HOME/var
+example2 = | varinfo subdir="run/splunk/csv"
+category = generating
+appears-in = 1.0
+maintainer = sjohnson
+usage = public
+tags = info_tools_app
+
+[cliinfo-command]
+syntax = cliinfo clicmd=<list, show, display command and options>
+alias =
+shortdesc = Generates results from a splunk command help, status, list, show or display and will accept up to 3 arguments
+description = \
+    This command generates results that contain the following fields: cmdout
+comment1 = \
+    The command will only work with help, status, list, show or display command and corresponding arguments
+example1 = | cliinfo clicmd="list shcluster-members"
+example2 = | cliinfo clicmd="status"
+example3 = | cliinfo clicmd="help show"
+category = generating
+appears-in = 1.0
+maintainer = sjohnson
+usage = public
+tags = info_tools_app
+
+[specinfo-command]
+syntax = specinfo spec=<spec file name>
+alias =
+shortdesc = Generates the contents of a .spec file from etc/system/README
+description = \
+    This command generates results that contain the following fields: contents
+comment1 = \
+    The command will only work with the name of a valid .spec file (which is the same as a .conf file)
+example1 = | specinfo spec=server
+example2 = | specinfo spec=props
 category = generating
 appears-in = 1.0
 maintainer = sjohnson
