--- a/default/commands.conf
+++ b/default/commands.conf
@@ -20,3 +20,33 @@ python.version = python3
 filename = btoolinfo.py
 chunked = true
 python.version = python3
+
+[pinginfo]
+filename = pinginfo.py
+chunked = true
+python.version = python3
+
+[sslinfo]
+filename = sslinfo.py
+chunked = true
+python.version = python3
+
+[artifactinfo]
+filename = artifactinfo.py
+chunked = true
+python.version = python3
+
+[varinfo]
+filename = varinfo.py
+chunked = true
+python.version = python3
+
+[cliinfo]
+filename = cliinfo.py
+chunked = true
+python.version = python3
+
+[specinfo]
+filename = specinfo.py
+chunked = true
+python.version = python3
